--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
           </h1>
 
           <p class="hero__lead" data-i18n-html="hero_lead">
-            Soy <strong>Jhoan Hernández</strong>. Me enfoco en desarrollar soluciones de software con base en lógica,
-            buenas prácticas y control de versiones. También construyo interfaces web responsivas con
+            Soy <strong>Jhoan Hernández</strong>. Desarrollo aplicaciones web y backend con enfoque en
+            <strong>buenas prácticas</strong>, <strong>lógica</strong> y <strong>control de versiones</strong>.
+            He construido proyectos con <strong>Java</strong> (<strong>Spring Boot</strong>) y <strong>Python</strong>,
+            integrando bases de datos
+            (<strong>PostgreSQL</strong>/<strong>SQL Server</strong>), y también interfaces responsivas con
             <strong>HTML</strong>, <strong>CSS</strong> y <strong>JavaScript</strong>.
-            Trabajo con <strong>Java</strong>, <strong>Python</strong>, <strong>SQL Server</strong> y
-            <strong>Git</strong>.
           </p>
+
 
           <div class="hero__cta">
             <a class="btn btn--primary" data-i18n="cta_projects" href="#projects">Ver proyectos</a>
@@ -166,12 +168,8 @@
 
           <div class="quick">
             <div class="quick__item">
-              <p class="quick__label" data-i18n="quick_stack">Stack</p>
-              <p class="quick__value" data-i18n="quick_stack_value">Java · Python · SQL Server · Git</p>
-            </div>
-            <div class="quick__item">
               <p class="quick__label" data-i18n="quick_interest">Interés</p>
-<p class="quick__value" data-i18n="quick_interest_value">Frontend · Backend · IA · Redes</p>
+              <p class="quick__value" data-i18n="quick_interest_value">Frontend · Backend · IA </p>
             </div>
             <div class="quick__item">
               <p class="quick__label" data-i18n="quick_availability">Disponibilidad</p>
@@ -193,21 +191,23 @@
           <p data-i18n-html="about_p1">
             Estudiante de Ingeniería de Sistemas e Informática en la <strong>Universidad Nacional del Santa
               (UNS)</strong>.
-            Me interesa construir software claro, mantenible y orientado a resolver problemas reales.
+            Me enfoco en construir software claro, mantenible y orientado a resolver problemas reales.
           </p>
-<p data-i18n-html="about_p2">
-            He trabajado con <strong>Java</strong> (POO) y <strong>Python</strong> para automatización y manejo de
-            datos.
-            Uso <strong>SQL Server</strong> para consultas y modelado, y <strong>Git/GitHub</strong> para control de
-            versiones.
-            En frontend, desarrollo interfaces con <strong>HTML/CSS/JavaScript</strong>, aplicando diseño responsivo y
-            buenas prácticas. También cuento con fundamentos de <strong>redes</strong> y metodologías como
-            <strong>Scrum</strong>.
+
+          <p data-i18n-html="about_p2">
+            He desarrollado <strong>aplicaciones web</strong> y <strong>backend</strong> con <strong>Java (Spring
+              Boot)</strong> y <strong>Python</strong>, integrando <strong>bases de datos</strong>
+            (<strong>PostgreSQL</strong>,
+            <strong>SQL Server</strong>)
+            y consumo de <strong>APIs</strong>. En frontend, trabajo con <strong>HTML/CSS/JavaScript</strong> aplicando
+            diseño responsivo.
+            Uso <strong>Git/GitHub</strong> para control de versiones y flujo de trabajo.
           </p>
 
           <p class="muted" data-i18n-html="about_p3">
-            Busco <strong>Prácticas Preprofesionales 2026</strong> en desarrollo de software, donde pueda aportar,
-            aprender del equipo y mejorar continuamente.
+            Busco <strong>Prácticas Preprofesionales 2026</strong> en desarrollo de software (frontend, backend o
+            full-stack),
+            donde pueda aportar con proyectos reales, aprender del equipo y mejorar continuamente.
           </p>
         </div>
       </div>
@@ -234,6 +234,7 @@
           <article class="card">
             <h3 class="h3" data-i18n="skills_frameworks">Frameworks</h3>
             <div class="skills">
+              <span class="skill"><i aria-hidden="true" class="devicon-spring-plain colored"></i> Spring Boot</span>
               <span class="skill"><i aria-hidden="true" class="devicon-flask-original colored"></i> Flask</span>
             </div>
           </article>
@@ -241,6 +242,7 @@
           <article class="card">
             <h3 class="h3" data-i18n="skills_databases">Bases de datos</h3>
             <div class="skills">
+              <span class="skill"><i aria-hidden="true" class="devicon-postgresql-plain colored"></i> PostgreSQL</span>
               <span class="skill"><i aria-hidden="true" class="devicon-microsoftsqlserver-plain colored"></i> SQL
                 Server</span>
               <span class="skill"><i aria-hidden="true" class="devicon-mongodb-plain colored"></i> MongoDB</span>
@@ -281,12 +283,10 @@
           <article class="card">
             <h3 class="h3" data-i18n="skills_learning">En aprendizaje</h3>
             <div class="skills">
-              <span class="skill"><i aria-hidden="true" class="devicon-typescript-plain colored"></i> TypeScript</span>
               <span class="skill"><i aria-hidden="true" class="devicon-react-original colored"></i> React</span>
               <span class="skill"><i aria-hidden="true" class="devicon-docker-plain colored"></i> Docker</span>
-              <span class="skill"><i aria-hidden="true" class="devicon-linux-plain colored"></i> Linux</span>
-              <span class="skill"><span aria-hidden="true" class="skill__emoji">⚙️</span> CI/CD</span>
-              <span class="skill"><span aria-hidden="true" class="skill__emoji">⚡</span> FastAPI</span>
+              <span class="skill"><i aria-hidden="true" class="devicon-laravel-plain colored"></i> Laravel</span>
+              <span class="skill"><i aria-hidden="true" class="devicon-php-plain colored"></i> PHP</span>
             </div>
             <p class="muted tiny" data-i18n="skills_learning_note">Roadmap 2026: deploy, buenas prácticas y tooling.</p>
           </article>
@@ -354,7 +354,7 @@
           <article class="card project">
             <header class="project__head">
               <h3 class="h3">Radar IA — Reddit Analytics Dashboard</h3>
-              <span class="pill" data-i18n="pill_featured">Destacado</span>
+              <span class="pill" data-i18n="pill_featured">Analítica Web</span>
             </header>
             <p class="muted" data-i18n="radar_desc">
               Pipeline en Python que recolecta publicaciones y comentarios de subreddits de IA,
@@ -385,7 +385,7 @@
           <article class="card project">
             <header class="project__head">
               <h3 class="h3" data-i18n="research_title">Investigación — Detección de EPP en tiempo real (YOLO)</h3>
-              <span class="pill" data-i18n="pill_inprogress">En curso</span>
+              <span class="pill" data-i18n="pill_inprogress">Investigación</span>
             </header>
             <p class="muted" data-i18n-html="research_desc">
               Detección de equipo de protección personal (EPP) en entornos industriales mediante Deep Learning.
@@ -400,14 +400,56 @@
               <span class="skill"><span aria-hidden="true" class="skill__emoji">📈</span> mAP / F1</span>
             </div>
             <ul class="list">
-              <li data-i18n="research_li1">Entrenamiento y comparación de arquitecturas YOLO (v8s/v8n/v5s/v5n/v5l) para detección multiclase de
+              <li data-i18n="research_li1">Entrenamiento y comparación de arquitecturas YOLO (v8s/v8n/v5s/v5n/v5l) para
+                detección multiclase de
                 EPP.</li>
-              <li data-i18n="research_li2">Desarrollo de aplicación de escritorio en tiempo real usando webcam e integración con móvil (p.ej.
+              <li data-i18n="research_li2">Desarrollo de aplicación de escritorio en tiempo real usando webcam e
+                integración con móvil (p.ej.
                 iVCam).</li>
-              <li data-i18n="research_li3">Evaluación con métricas estándar (Precisión, Recall, F1-Score, mAP) y análisis visual de predicciones.
+              <li data-i18n="research_li3">Evaluación con métricas estándar (Precisión, Recall, F1-Score, mAP) y
+                análisis visual de predicciones.
               </li>
             </ul>
           </article>
+
+          <article class="card project">
+            <header class="project__head">
+              <h3 class="h3" data-i18n="karnaval_title">BAZAR — El Karnaval (E-commerce + Stripe)</h3>
+              <span class="pill" data-i18n="pill_fullstack">E-commerce</span>
+            </header>
+
+            <p class="muted" data-i18n="karnaval_desc">
+              Tienda demo full-stack con Spring Boot + Thymeleaf: login, carrito y pagos con Stripe.
+            </p>
+
+            <figure class="project__media">
+              <img alt="Captura del proyecto Bazar El Karnaval" loading="lazy" src="assets/img/bazar-karnaval.png"
+                onerror="this.closest('figure').style.display='none';" />
+            </figure>
+
+            <div class="skills">
+              <span class="skill"><i aria-hidden="true" class="devicon-java-plain colored"></i> Java</span>
+              <span class="skill"><i aria-hidden="true" class="devicon-spring-plain colored"></i> Spring Boot</span>
+              <span class="skill"><span aria-hidden="true" class="skill__emoji">🗃️</span> SQL</span>
+              <span class="skill"><i aria-hidden="true" class="devicon-postgresql-plain colored"></i> PostgreSQL</span>
+              <span class="skill"><span aria-hidden="true" class="skill__emoji">💳</span> Stripe API</span>
+              <span class="skill"><span aria-hidden="true" class="skill__emoji">🔌</span> REST</span>
+            </div>
+
+            <ul class="list">
+              <li data-i18n="karnaval_li1">Autenticación y vistas (login, dashboard, catálogo).</li>
+              <li data-i18n="karnaval_li2">Carrito de compras con JS (agregar, quitar, contador).</li>
+              <li data-i18n="karnaval_li3">Checkout integrado con Stripe (modo prueba).</li>
+            </ul>
+
+            <div class="project__actions">
+              <a class="btn btn--small" data-i18n="btn_code" href="https://github.com/mikehernandez-bit/bazar-karnaval"
+                rel="noopener noreferrer" target="_blank">
+                Código
+              </a>
+            </div>
+          </article>
+
         </div>
       </div>
     </section>
